<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="user"
            type="com.example.muhammadjon.assignment_1.User" />

        <variable
            name="handlers"
            type="com.example.muhammadjon.assignment_1.Handlers"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_background_db"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/paddingForEditText"
            android:paddingRight="@dimen/paddingForEditText">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/logo"
                android:scaleType="centerInside"
                android:src="@drawable/logo_auh" />


            <EditText
                android:id="@+id/edit_text_email"
                style="@style/EditText"
                android:layout_marginTop="48dp"
                android:drawableLeft="@drawable/ic_form_email"
                android:drawableStart="@drawable/ic_form_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={user.email}"/>

            <EditText
                android:id="@+id/edit_text_password"
                style="@style/EditText"
                android:layout_marginTop="12dp"
                android:drawableLeft="@drawable/ic_form_password"
                android:drawableStart="@drawable/ic_form_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={user.password}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:textAlignment="center"
                android:text="@string/dataBinding"
                android:textSize="@dimen/textSize"
                android:textColor="@color/whiteColor"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:paddingLeft="70sp"
            android:paddingRight="70sp"
            android:text="@string/signIn"
            android:textSize="@dimen/textSize"
            android:onClick="@{()->handlers.onButtonClick(user.email, user.password)}"/>
            <!--android:onClick="@{()->activity.onClickButton(user.email, user.password)}"/>-->


    </FrameLayout>

</layout>
